<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_span="4" />
        </TableRow>
        <TableRow
            android:layout_width="130dp"
            android:layout_height="200dp">
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="120dp">
            <EditText
                android:id="@+id/edtInput"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_span="4"
                android:layout_gravity="right"
                android:inputType="number"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnCE"
                android:text="@string/ce"
                />
            <Button
                android:id="@+id/btnC"
                android:text="@string/c"
                />
            <Button
                android:id="@+id/btnDelete"
                android:text="@string/delete"
                android:layout_span="2"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnNumber7"
                android:text="@string/_7"
                />
            <Button
                android:id="@+id/btnNumber8"
                android:text="@string/_8"
                />
            <Button
                android:id="@+id/btnNumber9"
                android:text="@string/_9"
                />
            <Button
                android:id="@+id/btnNumberAdd"
                android:text="@string/add"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnNumber4"
                android:text="@string/_4"
                />
            <Button
                android:id="@+id/btnNumber5"
                android:text="@string/_5"
                />
            <Button
                android:id="@+id/btnNumber6"
                android:text="@string/_6"
                />
            <Button
                android:id="@+id/btnNumberSub"
                android:text="@string/minus"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnNumber1"
                android:text="@string/_1"
                />
            <Button
                android:id="@+id/btnNumber2"
                android:text="@string/_2"
                />
            <Button
                android:id="@+id/btnNumber3"
                android:text="@string/_3"
                />
            <Button
                android:id="@+id/btnNumberMul"
                android:text="@string/mul"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNumber0"
                android:text="@string/_0"
                />
            <Button
                android:id="@+id/btnDot"
                android:text="@string/dot"
                />
            <Button
                android:id="@+id/btnResult"
                android:text="@string/equals"
                />
            <Button
                android:id="@+id/btnNumberDiv"
                android:text="@string/divide"
                />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
